GreenNao/greennao/log/build_2025-04-10_10-05-02/greennao/stderr.log
  File "/home/evichan/Desktop/2024-tfg-eva-fernandez/GreenNao/greennao/install/greennao/lib/python3.10/site-packages/greennao/GreenNaoLib.py", line 258
    def get_orientation(self)
                             ^
SyntaxError: expected ':'

